packages/busymark_spellcheck_native/lib/busymark_spellcheck_native_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<BusySpellHandle>>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int busy_spell_open(
  ffi.Pointer<ffi.Char> aff_path_utf8,
  ffi.Pointer<ffi.Char> dic_path_utf8,
  ffi.Pointer<ffi.Pointer<BusySpellHandle>> out_handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<BusySpellHandle>)>()
external void busy_spell_close(ffi.Pointer<BusySpellHandle> handle);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<BusySpellHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int busy_spell_check(
  ffi.Pointer<BusySpellHandle> handle,
  ffi.Pointer<ffi.Char> word_utf8,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<BusySpellHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int busy_spell_suggest(
  ffi.Pointer<BusySpellHandle> handle,
  ffi.Pointer<ffi.Char> word_utf8,
  ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> out_items,
  ffi.Pointer<ffi.Size> out_count,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<BusySpellHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int busy_spell_add(
  ffi.Pointer<BusySpellHandle> handle,
  ffi.Pointer<ffi.Char> word_utf8,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<BusySpellHandle>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int busy_spell_dictionary_encoding(
  ffi.Pointer<BusySpellHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_encoding,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

/// Calls Pango with the complete UTF-8 prose run. The C bitfield attributes are
/// copied into stable byte/character ranges rather than exposed through FFI.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<BusySpellHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<BusySpellTokenRange>>,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int busy_spell_tokenize(
  ffi.Pointer<BusySpellHandle> handle,
  ffi.Pointer<ffi.Char> prose_utf8,
  ffi.Pointer<ffi.Char> language_utf8,
  ffi.Pointer<ffi.Pointer<BusySpellTokenRange>> out_ranges,
  ffi.Pointer<ffi.Size> out_count,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Size)>()
external void busy_spell_free_suggestions(
  ffi.Pointer<ffi.Pointer<ffi.Char>> items,
  int count,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<BusySpellTokenRange>)>()
external void busy_spell_free_token_ranges(
  ffi.Pointer<BusySpellTokenRange> ranges,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void busy_spell_free_string(ffi.Pointer<ffi.Char> value);

final class BusySpellHandle extends ffi.Opaque {}

final class BusySpellTokenRange extends ffi.Struct {
  @ffi.Uint32()
  external int utf8_start;

  @ffi.Uint32()
  external int utf8_end;

  @ffi.Uint32()
  external int character_start;

  @ffi.Uint32()
  external int character_end;
}

enum BusySpellStatus {
  BUSY_SPELL_ERROR(-1),
  BUSY_SPELL_REJECTED(0),
  BUSY_SPELL_ACCEPTED(1);

  final int value;
  const BusySpellStatus(this.value);

  static BusySpellStatus fromValue(int value) => switch (value) {
    -1 => BUSY_SPELL_ERROR,
    0 => BUSY_SPELL_REJECTED,
    1 => BUSY_SPELL_ACCEPTED,
    _ => throw ArgumentError('Unknown value for BusySpellStatus: $value'),
  };
}
